# Machine_Learning_Mask_Cassifier

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: ci-cd.yaml
